[package]
name = "plaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.3"
color-eyre = "0.6.1"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tokio = { version = "1.17.0", features = ["full", "tracing"] }
tower = "0.4.12"
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
tracing-tree = "0.2.0"
url = "2.2.2"
