[package]
name = "plaque"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
axum = { version = "0.5.3", features = ["json"] }
color-eyre = "0.6.1"
feed-rs = "1.0.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
parking_lot = "0.12.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full", "tracing"] }
tower = "0.4.12"
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
tracing-tree = "0.2.0"
url = "2.2.2"
